# smr-hydrangea

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
aptos_executor/: Cargo.toml
aptos_executor/src/: accounts.rs  database.rs  executor.rs  lib.rs  transaction_builder.rs
aptos_executor/src/scenarios/: mod.rs  three_trader.rs
benchmark/: .gitignore  fabfile.py  parse_results_to_csv.sh  requirements.txt  run.sh  run_many.sh  run_many_config.sh
benchmark/benchmark/: bootstrap_node.sh  commands.py  config.py  instance.py  local.py  logs.py  plot_moonshot_results.py  remote.py  rtt_sort.py  settings.py  utils.py
config/: Cargo.toml
config/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
hydrangea/: Cargo.toml
hydrangea/src/: aggregator.rs  committer.rs  consensus.rs  core.rs  leader.rs  messages.rs  proposer.rs  synchronizer.rs
move/simple_market/: Move.toml
move/simple_market/sources/: market_setup.move
network/src/: receiver.rs  reliable_sender.rs  simple_sender.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  batch_maker.rs  core.rs  error.rs  garbage_collector.rs  header_waiter.rs  lib.rs  messages.rs  primary.rs  proposer.rs  synchronizer.rs  worker.rs
scripts/: cleanup_start_local_ports.sh  integration_test.sh  start_local.sh  stop_local.sh
store/: Cargo.toml
worker/: Cargo.toml
worker/src/: batch_maker.rs  lib.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker.rs
worker/src/tests/: common.rs
