[workspace]
resolver = "2"
members = ["primary", "node", "store", "crypto", "worker", "network", "config", "hydrangea", "aptos_executor"]

[workspace.dependencies]
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-vm-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-vm-environment = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-vm-logging = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-gas-schedule = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
aptos-cached-packages = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
anyhow = "1.0.98"
bcs = "0.1.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.20", features = ["derive"] }

[patch.crates-io]
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
