[package]
name = "aptos_executor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
aptos-crypto = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-types = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-environment = { workspace = true }
aptos-vm-genesis = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-cached-packages = { workspace = true }
move-core-types = { workspace = true }
move-binary-format = { workspace = true }
config = { path = "../config" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
bytes = "1"
futures = "0.3"
