[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
futures = "0.3.15"
aptos_executor = { path = "../aptos_executor" }
aptos-types = { workspace = true }
bcs = { workspace = true }

config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
hydrangea = { path = "../hydrangea" }

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "hydrangea/benchmark"]

[[bin]]         
name = "benchmark_client"   
path = "src/benchmark_client.rs" 
required-features = ["benchmark"] 

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
